--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 </head>
 <body>
     <div id="gameContainer">
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-        <div id="controlArea" style="width: 400px; height: 400px;"></div>
+        <canvas id="gameCanvas" width="600" height="600"></canvas>
+        <div id="controlArea" style="width: 600px; height: 150px;"></div>
         <button id="startButton">Start Game</button>
     </div>
+
+    <!-- Audio elements -->
+    <audio id="eatSound" src="audio/eat_sound.wav" preload="auto"></audio>
+    <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
+    <audio id="bgMusic" src="audio/bgmusic.mp3" preload="auto" loop></audio>
+
     <script src="script.js"></script>
 </body>
 </html>
+
