--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
     <audio id="bgMusic" src="audio/bgmusic.mp3" preload="auto" loop></audio>
 
+    <!-- Leaderboard display (you can style and position this as needed) -->
+    <div id="leaderboard">
+        <h3>Leaderboard</h3>
+        <ul id="leaderboardList">
+            <!-- Leaderboard entries will be populated here -->
+        </ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
