--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div id="rainContainer"></div>
     <div id="gameContainer">
         <canvas id="gameCanvas" width="600" height="600"></canvas>
         <div id="controlArea" style="width: 600px; height: 150px;"></div>
@@ -16,12 +17,10 @@
     <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
     <audio id="bgMusic" src="audio/bgmusic.mp3" preload="auto" loop></audio>
 
-    <!-- Leaderboard display (you can style and position this as needed) -->
+    <!-- Leaderboard display -->
     <div id="leaderboard">
         <h3>Leaderboard</h3>
-        <ul id="leaderboardList">
-            <!-- Leaderboard entries will be populated here -->
-        </ul>
+        <ul id="leaderboardList"></ul>
     </div>
 
     <script src="script.js"></script>
