--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <div id="controlArea" style="width: 600px; height: 150px;"></div>
         <button id="startButton">Start Game</button>
     </div>
+    <div id="nameEntry" style="display: none;">
+    <label for="playerName">Enter your name:</label>
+    <input type="text" id="playerName">
+    <button onclick="submitPlayerScore()">Submit</button>
+</div>
 
     <!-- Audio elements -->
     <audio id="eatSound" src="audio/eat_sound.wav" preload="auto"></audio>
