--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <label for="playerName">Enter your name:</label>
     <input type="text" id="playerName">
     <button onclick="submitPlayerScore()">Submit</button>
+    <div id="controlArea">
+    <p>Control Area (Swipe)</p>
 </div>
 
+    
+
+
+    
     <!-- Audio elements -->
     <audio id="eatSound" src="audio/eat_sound.wav" preload="auto"></audio>
     <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
