--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Simple Snake Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="rainContainer"></div>
     <div id="gameContainer">
-        <canvas id="gameCanvas" width="800" height="800"></canvas>
-        <div id="controlArea" style="width: 800px; height: 600px; display: flex; justify-content: center; align-items: center;">
-            <p>Control Area (Swipe)</p>
-        </div>
-        <button id="startButton">Start Game</button>
+        <canvas id="gameCanvas" width="600" height="600"></canvas>
     </div>
+    <div id="controlArea" style="display: flex; justify-content: center; align-items: center;">
+        <p>Control Area (Swipe)</p>
+    </div>
+    <button id="startButton">Start Game</button>
 
     <!-- Audio elements -->
     <audio id="eatSound" src="audio/eat_sound.wav" preload="auto"></audio>
     <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
     <audio id="bgMusic" src="audio/bgmusic.mp3" preload="auto" loop></audio>
+
+    <!-- Name entry for leaderboard -->
+    <div id="nameEntry" style="display: none;">
+        <input type="text" id="playerName" placeholder="Enter your name">
+        <button onclick="submitPlayerScore()">Submit Score</button>
+    </div>
 
     <!-- Leaderboard display -->
     <div id="leaderboard">
@@ -25,13 +32,7 @@
         <ul id="leaderboardList"></ul>
     </div>
 
-    <!-- Name entry for leaderboard -->
-    <div id="nameEntry" style="display: none;">
-        <label for="playerName">Enter your name:</label>
-        <input type="text" id="playerName">
-        <button onclick="submitPlayerScore()">Submit</button>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
+
