--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="gameContainer">
         <canvas id="gameCanvas" width="600" height="600"></canvas>
     </div>
-    <div id="controlArea" style="display: flex; justify-content: center; align-items: center;">
+    <div id="controlArea" style="width: 600px; height: 150px;"></div>
         <p>Control Area (Swipe)</p>
     </div>
     <button id="startButton">Start Game</button>
