--- a/index.html
+++ b/index.html
@@ -7,32 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="gameContainer">
+    <div id="gameWrapper">
         <canvas id="gameCanvas" width="400" height="400"></canvas>
     </div>
-    <div id="controlArea" style="width: 400px; height: 150px;"></div>
-        <p>Control Area (Swipe)</p>
+    <div id="infoPanel">
+        <div id="scoreDisplay">Score: 0</div>
+        <button id="startButton">Start Game</button>
+        <div id="leaderboard">
+            <h3>Leaderboard</h3>
+            <ul id="leaderboardList"></ul>
+        </div>
     </div>
-    <button id="startButton">Start Game</button>
-
-    <!-- Audio elements -->
     <audio id="eatSound" src="audio/eat_sound.wav" preload="auto"></audio>
     <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
     <audio id="bgMusic" src="audio/bgmusic.mp3" preload="auto" loop></audio>
-
-    <!-- Name entry for leaderboard -->
-    <div id="nameEntry" style="display: none;">
-        <input type="text" id="playerName" placeholder="Enter your name">
-        <button onclick="submitPlayerScore()">Submit Score</button>
-    </div>
-
-    <!-- Leaderboard display -->
-    <div id="leaderboard">
-        <h3>Leaderboard</h3>
-        <ul id="leaderboardList"></ul>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
+
 
