--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <div id="infoPanel">
         <div id="scoreDisplay">Score: 0</div>
         <button id="startButton">Start Game</button>
+
+        <div id="gameOverOverlay" style="display: none;">
+    <div id="gameOverContent">
+        <input type="text" id="playerName" placeholder="Enter your name" />
+        <button id="submitScoreButton">Submit Score</button>
+        <button id="retryButton">Retry</button>
+    </div>
+</div>
+
          
         <div id="leaderboard">
             <h3>Leaderboard</h3>
