--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
     </div>
 </div>
 
-         
-        <div id="leaderboard">
-            <h3>Leaderboard</h3>
-            <ul id="leaderboardList"></ul>
-        </div>
+<body>
+    <div id="scoreSubmission">
+        <input type="text" id="playerName" placeholder="Enter your name">
+        <input type="number" id="playerScore" placeholder="Enter your score">
+        <button onclick="submitScore()">Submit Score</button>
     </div>
-    <audio id="eatSound" src="audio/eat_sound.wav" preload="auto"></audio>
-    <audio id="gameOverSound" src="audio/game_over_sound.wav" preload="auto"></audio>
-    <audio id="bgMusic" src="audio/bgmusic.mp3" preload="auto" loop></audio>
+    <div id="leaderboard">
+        <h2>Leaderboard</h2>
+        <ul id="leaderboardList"></ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
