--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div id="scoreDisplay">Score: 0</div>
         <button id="startButton">Start Game</button>
 
+        <button id="retryButton" style="display: none;">Retry</button>
+
+
 <body>
     <div id="scoreSubmission">
         <input type="text" id="playerName" placeholder="Enter your name">
