--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
     <div id="infoPanel">
         <div id="scoreDisplay">Score: 0</div>
         <button id="startButton">Start Game</button>
-
         <button id="retryButton" style="display: none;">Retry</button>
-
-
-<body>
+    </div>
     <div id="scoreSubmission">
         <input type="text" id="playerName" placeholder="Enter your name">
-        <input type="number" id="playerScore" placeholder="Enter your score">
+        <!-- Removed the playerScore input as you mentioned the score should be sent by the real score of the game -->
         <button onclick="submitScore()">Submit Score</button>
     </div>
     <div id="leaderboard">
@@ -30,6 +27,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
