--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <!-- Removed the playerScore input as you mentioned the score should be sent by the real score of the game -->
         <button onclick="submitScore()">Submit Score</button>
     </div>
+    <div id="gameOverModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Game Over! Enter your name:</p>
+        <input type="text" id="playerNameInput" placeholder="Your Name">
+        <button onclick="submitName()">Submit</button>
+    </div>
+</div>
+
     <div id="leaderboard">
         <h2>Leaderboard</h2>
         <ul id="leaderboardList"></ul>
